Mejoras en la interfaz

--- a/src/app/pages/nueva-tarea/nueva-tarea.page.html
+++ b/src/app/pages/nueva-tarea/nueva-tarea.page.html
@@ -10,37 +10,38 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Nueva Tarea</ion-title>
+      <ion-title size="large">Nueva tarea</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-list>
-    <!-- Nombre -->
-    <ion-item>
-      <ion-input label="Tarea" placeholder="Nombre" [(ngModel)]="tarea.nombre"></ion-input>
-    </ion-item>
-    <!-- Descripción -->
-    <ion-item>
-      <ion-textarea label="Descripción" placeholder="Descripción de la tarea"
-        [(ngModel)]="tarea.descripcion"></ion-textarea>
-    </ion-item>
-    <!-- Fecha de fin-->
+  <!-- Fecha de fin-->
+  <ion-item class="seccion">
+    <ion-label>Fecha fin</ion-label>
     <ion-datetime-button datetime="datetime"></ion-datetime-button>
     <ion-modal [keepContentsMounted]="true">
       <ng-template>
         <ion-datetime id="datetime" presentation="date" [(ngModel)]="tarea.fechaLimite"></ion-datetime>
       </ng-template>
     </ion-modal>
-    <!-- Criticidad-->
-    <ion-item>
-      <ion-select placeholder="Seleccione criticidad" [(ngModel)]="tarea.criticidad">
-        <div slot="label">Criticidad</div>
-        <ion-select-option value="Alta">Alta</ion-select-option>
-        <ion-select-option value="Media">Media</ion-select-option>
-        <ion-select-option value="Baja">Baja</ion-select-option>
-      </ion-select>
-    </ion-item>
-    <ion-item>
-      <ion-button (click)="guardarTarea()">Guardar</ion-button>
-    </ion-item>
-  </ion-list>
+  </ion-item>
+  <!-- Nombre -->
+  <ion-item class="seccion">
+    <ion-input [(ngModel)]="tarea.nombre" label="Nombre" labelPlacement="stacked" [clearInput]="true"
+      placeholder="Nombre de la tarea" value="Default value">
+    </ion-input>
+  </ion-item>
+  <!-- Descripción -->
+  <ion-item class="seccion">
+    <ion-textarea label="Descripción" placeholder="Descripción de la tarea" labelPlacement="stacked" 
+      [(ngModel)]="tarea.descripcion"></ion-textarea>
+  </ion-item>
+  <!-- Criticidad-->
+  <ion-item class="seccion">
+    <ion-select placeholder="Seleccione criticidad" [(ngModel)]="tarea.criticidad" interface="popover">
+      <div slot="label">Criticidad</div>
+      <ion-select-option value="Alta">Alta</ion-select-option>
+      <ion-select-option value="Media">Media</ion-select-option>
+      <ion-select-option value="Baja">Baja</ion-select-option>
+    </ion-select>
+  </ion-item>
+  <ion-button (click)="guardarTarea()" expand="block" id="b-guardar" size="large">Guardar</ion-button>
 </ion-content>
