--- a/src/app/pages/nueva-tarea/nueva-tarea.page.html
+++ b/src/app/pages/nueva-tarea/nueva-tarea.page.html
@@ -8,11 +8,6 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Nueva tarea</ion-title>
-    </ion-toolbar>
-  </ion-header>
   <!-- Fecha de fin-->
   <ion-item class="seccion">
     <ion-label>Fecha fin</ion-label>
@@ -43,5 +38,6 @@
       <ion-select-option value="Baja">Baja</ion-select-option>
     </ion-select>
   </ion-item>
-  <ion-button (click)="guardarTarea()" expand="block" id="b-guardar" size="large">Guardar</ion-button>
+  <ion-button (click)="guardarTarea()" expand="block" id="b-guardar" size="large">Crear</ion-button>
+  {{ tarea | json}}
 </ion-content>
