--- a/src/app/components/tarea/tarea.component.html
+++ b/src/app/components/tarea/tarea.component.html
@@ -1,3 +1,13 @@
-<div>
-  <h4>{{tarea.nombre}}</h4>
-</div>
+<ion-card class="card-margin-small" [ngClass]="tipoCriticidad">
+  <ion-card-header>
+    <ion-card-title>{{tarea.nombre}}</ion-card-title>
+    <ion-card-subtitle [ngStyle]="estiloEstado">{{tarea.estado}}</ion-card-subtitle>
+  </ion-card-header>
+
+  <ion-card-content>
+    <p>
+    {{tarea.descripcion}}
+  </p>
+  <p class="fecha">{{tarea.fechaLimite}}</p>
+  </ion-card-content>
+</ion-card>
