--- a/src/app/pages/todas-tareas/todas-tareas.page.html
+++ b/src/app/pages/todas-tareas/todas-tareas.page.html
@@ -3,19 +3,14 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title> Nueva tarea</ion-title>
+    <ion-title>Tareas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">todasTareas</ion-title>
-    </ion-toolbar>
-  </ion-header>
   <ion-list>
-    <ion-item *ngFor="let tareax of tareas">
-      <app-tarea [tarea]="tareax"></app-tarea>
+    <ion-item *ngFor="let tareax of tareas" lines="none">
+      <app-tarea [tarea]="tareax" class="full-width"></app-tarea>
     </ion-item>
   </ion-list>
 </ion-content>
