Edición de tareas

--- a/src/app/components/tarea/tarea.component.scss
+++ b/src/app/components/tarea/tarea.component.scss
@@ -6,13 +6,13 @@
 }
 
 .criticidad-baja {
-    background-color: #e0dfdf;
+    background-color: #ffffff;
 }
 
 .criticidad-media {
-    background-color: #c5fbbd;
+    background-color: #ffe7b9;
 }
 
 .criticidad-alta {
-    background-color: #e8aaaa;
+    background-color: #ffd4d4;
 }
