--- a/src/app/pages/buscar-tareas/buscar-tareas.page.html
+++ b/src/app/pages/buscar-tareas/buscar-tareas.page.html
@@ -3,14 +3,43 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title> Nueva tarea</ion-title>
+    <ion-title>Buscar</ion-title>
+    <ion-badge slot="end" id="contador">{{tareasFiltradas.length}}</ion-badge>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">buscarTareas</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <ion-list [inset]="true">
+    <ion-input placeholder="Buscar" (input)="buscar()" [(ngModel)]="textoBusqueda"></ion-input>
+    @for (tarea of tareasFiltradas; track $index) {
+    <ion-item-sliding>
+      <ion-item [button]="true">
+        <ion-avatar aria-hidden="true" slot="start">
+          <ion-icon class="icono-estado" name="logo-ionic" color="danger" *ngIf="tarea.estado === 'Pendiente'" size="large"></ion-icon>
+          <ion-icon class="icono-estado" name="logo-ionic" color="warning" *ngIf="tarea.estado === 'En proceso'" size="large"></ion-icon>
+          <ion-icon class="icono-estado" name="logo-ionic" color="success" *ngIf="tarea.estado === 'Finalizada'" size="large"></ion-icon>
+        </ion-avatar>
+
+
+        <ion-label>{{tarea.nombre}}</ion-label>
+      </ion-item>
+      <ion-item-options slot="end">
+        <ion-item-option color="warning" *ngIf="tarea.estado !== 'Pendiente'" (click)="reabrirTarea(tarea)">
+          <ion-label>Pendiente</ion-label>
+        </ion-item-option>
+        <ion-item-option color="tertiary" *ngIf="tarea.estado !== 'En proceso'" (click)="procesarTarea(tarea)">
+          <ion-label>En proceso</ion-label>
+        </ion-item-option>
+        <ion-item-option color="danger" expandable="true" *ngIf="tarea.estado !== 'Finalizada'"
+          (click)="finalizarTarea(tarea)">
+          <ion-label>Finalizado</ion-label>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    }
+
+  </ion-list>
+
+
 </ion-content>
