--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,14 +15,12 @@
             </ion-menu-toggle>
           }
         </ion-list>
-
         <ion-list id="labels-list">
           <ion-list-header>Labels</ion-list-header>
-
           @for (label of labels; track label) {
-            <ion-item lines="none">
+            <ion-item lines="none" [routerLink]="[label.url]">
               <ion-icon aria-hidden="true" slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-              <ion-label>{{ label }}</ion-label>
+              <ion-label>{{ label.title }}</ion-label>
             </ion-item>
           }
         </ion-list>
