Corrección de errores

--- a/src/app/pages/todas-tareas/todas-tareas.page.html
+++ b/src/app/pages/todas-tareas/todas-tareas.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Tareas</ion-title>
-    <ion-badge slot="end" id="contador">{{tareas.length}}</ion-badge>
+    <ion-badge slot="end" id="contador">{{tareas?.length}}</ion-badge>
   </ion-toolbar>
 </ion-header>
 
