--- a/src/app/pages/buscar-tareas/buscar-tareas.page.html
+++ b/src/app/pages/buscar-tareas/buscar-tareas.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Buscar</ion-title>
-    <ion-badge slot="end" id="contador">{{tareasFiltradas.length}}</ion-badge>
+    <ion-badge slot="end" id="contador">{{tareasFiltradas?.length}}</ion-badge>
   </ion-toolbar>
 </ion-header>
 
